--- a/css/main.css
+++ b/css/main.css
@@ -6,3 +6,41 @@ html, body, #canvas {
     overflow: hidden;
     touch-action: none;
 }
+
+.offScreen {
+    position: absolute;
+    transform: scale(0);
+    transition: all ease-in 0.8s;
+}
+
+.onScreen {
+    transform: scale(1);
+}
+
+body {
+    font-size: 62.5%;
+}
+
+label, input {
+    display: block;
+}
+
+    input.text {
+        margin-bottom: 12px;
+        width: 95%;
+        padding: .4em;
+    }
+
+fieldset {
+    padding: 0;
+    border: 0;
+    margin-top: 25px;
+}
+
+#logo {
+    width: 100%;
+    height: 100%;
+    background: url('../textures/LLDLA.jpg') no-repeat 0 0;
+    background-position: center;
+    background-size: 100%;
+}
